tests/ui/consts/const-closure-hkl.current.stderr
error[E0277]: the trait bound `for<'a> {closure@$DIR/const-closure-hkl.rs:11:21: 11:48}: [const] FnOnce(&'a usize, &'a usize)` is not satisfied
  --> $DIR/const-closure-hkl.rs:13:19
   |
LL |     chaining_impl(len_chain);
   |     ------------- ^^^^^^^^^
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `chaining_impl`
  --> $DIR/const-closure-hkl.rs:17:32
   |
LL | const fn chaining_impl(x: impl for<'a> [const] FnOnce(&'a usize, &'a usize)) {
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `chaining_impl`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
